# cuda_stuff

./: CMakeLists.txt  build.sh  configure.sh  run.sh
inc/: cudaMultiplier_own.cuh  main.cuh  matrix_transpose.cuh  tests.cuh
src/: CMakeLists.txt  common.cuh  cudaDmy.cuh  cudaMultiplier_own.cu  cudaMultiplier_standard.cu  cudaMultiplier_standard.cuh  main.cu  matrix_transpose.cu  tests.cu
